Fix spacing for content dash-lists for mobile and tablet
Re task 40 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/helpers/_dash-list.scss
+++ b/app/assets/stylesheets/frontend/helpers/_dash-list.scss
@@ -1,7 +1,9 @@
 .dash-list {
+  margin-bottom: $gutter-two-thirds;
+
   li {
     list-style-position: inside;
-    padding-top: $gutter-one-sixth;
+    padding-top: 0;
     padding-right: $gutter-half;
 
     @media (min-width: 1px ){ // target modern browsers
@@ -14,6 +16,10 @@
         width: $gutter-half;
         margin-left: $gutter-half*-1;
       }
+    }
+
+    @include media(desktop) {
+      padding-top: $gutter-one-sixth;
     }
   }
 }
